@@ -1,15 +1,17 @@
 package com.example.newsfeed.comment.service;
 
-import com.example.newsfeed.comment.dto.CommentFindAllByPostResponseDto;
-import com.example.newsfeed.comment.dto.CommentFindAllMineResponseDto;
-import com.example.newsfeed.comment.dto.CommentResponseDto;
+import com.example.newsfeed.comment.dto.*;
 import com.example.newsfeed.comment.entity.Comment;
 import com.example.newsfeed.comment.repository.CommentRepository;
+import com.example.newsfeed.common.consts.Const;
 import com.example.newsfeed.post.entity.Post;
 import com.example.newsfeed.post.repository.PostRepository;
-import com.example.newsfeed.comment.dto.CommentUpdateResponseDto;
 import com.example.newsfeed.user.entity.User;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
@@ -50,18 +52,26 @@ public class CommentService {
                 )).collect(Collectors.toList());
     }
 
-    public List<CommentFindAllByPostResponseDto> findAllByPostId(Long id) {
-        Collection<Comment> comments = commentRepository.findAllByPostId(id);
-        return comments.stream()
-                .sorted(Comparator.comparing(Comment::getCreatedAt).reversed())
+    public PagedCommentResponseDto findAllByPostId(Long id, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));  //페이지네이션 하는겸 정렬
+        Page<Comment> comments = commentRepository.findAllByPostId(id, pageable);   //찾은걸 Page 형태로 리턴
+
+        if (comments.isEmpty()) {   //없으면 예외처리
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "댓글이 없습니다.");
+        }
+
+        List<CommentFindAllByPostResponseDto> commentList = comments.stream()   //이렇게 하면 responseDto 가 두개라 싫어서 다른 방법으로 Comment 에 생성자 만들어서 List<Comment> 로 해봤는데 그때는 Comment 필드의 다른 필요없는 값도 응답에 null 로 튀어나옴 (예를 들면 user 필드 같은거) 그래서 dto 만들어서 필요한 것만 넣음
                 .map(comment -> new CommentFindAllByPostResponseDto(
                         comment.getId(),
                         comment.getContents()
-                )).collect(Collectors.toList());
+                )).toList();
+
+        return new PagedCommentResponseDto(commentList, comments.getNumber() + 1, comments.getTotalPages());
     }
 
     public List<CommentFindAllMineResponseDto> findAll(Long id) {
         List<Comment> comments = commentRepository.findAllByUserIdOrElseThrow(id); //내가 작성한 댓글있나 userId로 찾아줌
+
         return comments.stream()
                 .sorted(Comparator.comparing(Comment::getCreatedAt).reversed()  //먼저 최신 댓글 기준으로 정렬하면서 그 다음은 수정일 기준으로 정렬.
                         .thenComparing(Comment::getModifiedAt))
